lankaguide360/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lankaguide360
  labels:
    app.kubernetes.io/part-of: lankaguide360
